<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"/>
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/notifications"
            android:icon="@drawable/ic_notifications_black_24dp"/>
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics"
            android:icon="@drawable/ic_data_usage_black_24dp"/>
        <item
            android:id="@+id/nav_Credits"
            android:icon="@drawable/ic_child_care_black_24dp"
            android:title="@string/credits" />
    </group>
</menu>