<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cbr.gradienttextview.GradientTextView
        android:id="@+id/titleDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Results"
        android:textSize="24sp"
        android:textStyle="bold"
        app:gt_color_list="@array/gradient1"
        app:gt_gradient_direction="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.cbr.gradienttextview.GradientTextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="State"
        android:textSize="24sp"
        android:textStyle="bold"
        app:gt_color_list="@array/gradient1"
        app:gt_gradient_direction="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.051" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="118dp"
        android:layout_height="81dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/good_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="2dp"
            android:background="#4FC3F7">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@android:color/white"
                android:src="@drawable/ketone" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#BBDEFB" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/ketone"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/ketone_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="10"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:fontFamily="open_sans"
                    android:gravity="center"
                    android:text="Day"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:fontFamily="open_sans"
                    android:gravity="center_horizontal"
                    android:text="28/04/2018"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/refresh_icon"
                android:textColor="@color/colorMain" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="2dp"
            android:background="#29B6F6">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@android:color/white"
                android:src="@drawable/temperature" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#BBDEFB" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/temperature"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/temperature_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="37°"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:fontFamily="open_sans"
                    android:gravity="center"
                    android:text="Day"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:fontFamily="open_sans"
                    android:gravity="center_horizontal"
                    android:text="28/04/2018"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/refresh_icon"
                android:textColor="@color/colorMain" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#03A9F4">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@android:color/white"
                android:src="@drawable/humidity" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#BBDEFB" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/humidity"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/humidity_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="17%"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:fontFamily="open_sans"
                    android:gravity="center"
                    android:text="Day"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:fontFamily="open_sans"
                    android:gravity="center_horizontal"
                    android:text="28/04/2018"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:src="@drawable/refresh_icon"
                android:textColor="@color/colorMain" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:text="Good"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="#BBDEFB"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent">-->


        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/message_doctor"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="64dp"-->
            <!--android:layout_weight="0.33"-->
            <!--android:src="@drawable/message_icon" />-->

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/launch_test"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="64dp"-->
            <!--android:layout_weight="0.33"-->
            <!--android:src="@drawable/heart" />-->

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
            <!--android:id="@+id/call_dotor"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="64dp"-->
            <!--android:layout_weight="0.33"-->
            <!--android:src="@drawable/call_icon" />-->
    <!--</LinearLayout>-->

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>